# SSIM-PSNR

./: CMakeLists.txt  README.md  build.bat  main.cc  ssim-psnr.cc  ssim-psnr.h
